--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "linkcable.github.io-vapor",
+  "name": "windows98.philkt.me",
   "version": "0.1.0",
-  "homepage": "http://linkcable.github.io/vapor",
+  "homepage": "/",
   "private": true,
   "devDependencies": {
     "gh-pages": "^0.11.0",
@@ -14,7 +14,7 @@
     "react-dom": "^15.3.2",
     "react-draggable": "^2.2.2",
     "react-ga": "^2.1.2",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.0",
     "windows_98.css": "0.0.1"
   },
   "scripts": {
